# capsule

./: 404.html  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup_.py
.github/workflows/: publish_merge.yml
api_base/: index.html
api_classification/: index.html
api_regression/: index.html
docs/: api_base.md  api_classification.md  api_regression.md  conf.py
license/: index.html
src/bezzanlabs/capsule/: __init__.py  base_capsule.py  capsule.py  capsule_base.py  datetime.py  proto.py  secure_capsule.py  types.py
src/bezzanlabs/capsule/capsule/: __init__.py  build_capsule.py  capsule.py  classifier.py  regressor.py
src/bezzanlabs/capsule/services/: __init__.py  classifier_metrics.py  exceptions.py  regressor_metrics.py  service.py
src/capsule/: __init__.py  base.py  classification.py  regression.py
tests/: __init__.py  test_base_capsule_pickling.py  test_classification.py  test_classifier.py  test_regression.py  test_regressor.py
