[build-system]
requires = ["setuptools>=75.1.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "bezzanlabs.capsule"
authors = [
  {name="Vitor Bezzan", email="vitor@bezzan.com"},
]
description = "Gives models superpowers in production."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.setuptools.dynamic]
version = {attr = "capsule.__version__"}

[project.optional-dependencies]
dev = [
    "pre-commit==4.2.0",
    "mypy==1.15.0",
    "pytest==8.3.5",
    "pytest-mock==3.14.0",
    "pytest-cov==6.1.1",
    "isort==6.0.1",
    "pandas-stubs==2.2.3.250308",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.12",
    "mkdocstrings-python==1.16.10",
    "mkdocs-exporter==6.2.0",
    "bandit==1.8.3",
    "pip_audit==2.9.0",
]

[project.urls]
"Homepage" = "https://github.com/vitorbezzan/capsule"
"Bug Tracker" = "https://github.com/vitorbezzan/capsule"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report html --cov-report term-missing --cov-fail-under 0"
pythonpath = [
  "src"
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "I", "N", "D", "UP", "YTT", "ANN", "S", "BLE", "B", "A", "COM", "C4", "DTZ", "EM", "EXE", "FA", "ISC", "ICN", "INP", "PIE", "PT", "Q", "RET", "SIM", "T20", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "RUF"]
ignore = []
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]
