[build-system]
requires = ["setuptools>=75.1.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "capsule"
authors = [
  {name="Vitor Bezzan", email="vitor@bezzan.com"},
]
description = "Gives models superpowers in production."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "nannyml>=0.13.0",
    "cryptography==45.0.6",
]

[tool.setuptools.dynamic]
version = {attr = "capsule.__version__"}

[project.optional-dependencies]
dev = [
    "pre-commit==4.2.0",
    "mypy==1.15.0",
    "pytest==8.3.5",
    "pytest-mock==3.14.0",
    "pytest-cov==6.1.1",
    "isort==6.0.1",
    "pandas-stubs==2.2.3.250308",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.12",
    "mkdocstrings-python==1.16.10",
    "mkdocs-exporter==6.2.0",
    "bandit==1.8.3",
    "pip_audit==2.9.0",
]

[project.urls]
"Homepage" = "https://github.com/vitorbezzan/capsule"
"Bug Tracker" = "https://github.com/vitorbezzan/capsule"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report html --cov-report term-missing --cov-fail-under 0"
pythonpath = [
  "src"
]

[tool.ruff]
target-version = "py312"
line-length = 88
show-fixes = true
extend-include = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint]
pydocstyle.convention = "google"
# NOTE: Synchoronize the ignores with .flake8
ignore = [
    "B007", "B008", "B017", "B018", "B023", "B028",  # Various B-prefixed rules
    "E402", "E501", "E721", "E741",  # E-prefixed rules
    "C408",  # Dict keyword argument syntax
    "D415", "D205",
    "EXE001",
    "F405",
    "G101", "G004",
    "NPY002",
    "PERF203", "PERF401", "PERF403",
    "PYI024", "PYI036", "PYI041", "PYI056",
    "SIM102", "SIM103", "SIM105", "SIM108", "SIM110",
    "SIM112", "SIM113", "SIM114", "SIM115", "SIM116", "SIM117", "SIM118",
    "TRY002",
    "UP006", "UP007", "UP040",  # Runtime typing rules
    "RUF013"
]
select = [
    "B", "B904",  # Basic rules
    "C4",  # Comprehension rules
    "D",   # Docstrings
    "E", "EXE", "F", "G", "W",  # Common linting rules
    "FURB", "LOG", "NPY", "PERF",  # Additional checks
    "PGH004",
    "PIE790", "PIE794", "PIE800", "PIE804", "PIE807", "PIE810",
    "PLC0131", "PLC0132", "PLC0205",  # Type checking
    "PLE",
    "PLR0133", "PLR0206", "PLR1722", "PLR1736",  # Various Python rules
    "PLW0129", "PLW0131", "PLW0133", "PLW0245", "PLW0406", "PLW0711",
    "PLW1501", "PLW1509", "PLW2101", "PLW3301",
    "PYI",
    "Q003", "Q004",  # Quote handling
    "RSE",
    "RUF008", "RUF013", "RUF015", "RUF016", "RUF017", "RUF018", "RUF019",
    "RUF024", "RUF026",
    "SLOT", "TCH",
    "TRY002", "TRY203", "TRY401",
    "UP"
]
